﻿-- 0.706 --
* [L#202563] Fixed some missing translations
* Use setenv on unix (thanks yakov suraev)
* Fixed out of focus window when restoring from icon (poy)
* [L#203865] Fixed multiple instances (poy)
* Context-sensitive help (poy)
* Updated help files (poy)
* Fixed toolbar separators (poy)
* Upgraded to bzip2 1.0.5 (thanks mikejj)
* Fixed background color of drop-down controls
* Fixed selection glitches
* Both up&downloads are disconnected if evil users quit (thanks poy)
* Add average share to status bar (thanks mikejj)
* Minor improvements to load / save dialogs
* [L#208917] Fixed menu background colors (poy)
* [L#208344] Fix about dialog up/down stats
* [L#209099] Fixed non-disappearing controls in search (poy)
* [L#208684] Made the Alt key work again for line history in hub window (poy)
* [L#209684] Fixed parsing of non-XML hub lists (poy)
* [L#205660] Readded hub column to transfers (thanks mikejj)
* Fixed file list refresh happening 1 minute later than expected (poy)
* [L#209277] Fixed crash on bad translation (thanks poy)
* More controls now use the font defined in settings (poy)
* [L#211164] Fixed bug when a new tab row is created while DC++ is minimized (poy)

-- 0.705 2008-03-14 --
* Several patches for better *nix compatibility of the core (thanks steven sheehy et al)
* Improve segmented download implementation
* Fix search request ip when using multiple ip's (thanks stanislav maslovski)
* Fixed a crash when right-clicking in own file list
* [ADC] Searches filtered by token if available so that each search window only gets its own results
* [ADC] Implemented test version of bloom filters which will dramatically reduce hub bandwidth usage for TTH searches
* Fixed a crash with partial list browsing
* Replaced homegrown i18n solution with gettext (thanks david grundberg, mikejj)
* Fixed an issue with nick encodings and nmdc connections (thanks stanislav maslovski)
* Added download view which shows per-file download information